# red-pitaya-notes-ctrl

./: replicate_tasks.md
debian/etc/systemd/system/: red-pitaya-bazaar.service  sdr-transceiver-hpsdr-autostart.service  sdr-transceiver-hpsdr.service
helpers/: build-all.sh  build-debian-122_88.sh  build-debian.sh  build-project.sh
projects/hl2io_board/: CMakeLists.txt  README.md  i2c_registers.h  main.c  pico_sdk_import.cmake
projects/sdr_transceiver_hpsdr_122_88/server/: Makefile  sdr-transceiver-hpsdr.c
scripts/: debian-122_88.sh
